samples/_failures_safe/1761619628_6e6780_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02d5ce1c.c: In function ‘main’:
./samples/SAFE/__tmp_02d5ce1c.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
